<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multisense_ros</name>
  <version>4.0.3</version>
  <description>multisense_ros</description>
  <maintainer email="support@carnegierobotics.com">Carnegie Robotics</maintainer>
  <license>BSD</license>

  <url type="website">https://bitbucket.org/crl/multisense_ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <buildtool_depend>yaml-cpp</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>image-geometry</build_depend>
  <build_depend>multisense_lib</build_depend>
  <build_depend>multisense_msgs</build_depend>
  <build_depend>ros_environment</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <exec_depend>angles</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image-geometry</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend>multisense_lib</exec_depend>
  <exec_depend>multisense_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>stereo_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
